# techtree

./: .credo.exs  .dockerignore  .env.example  .env.full.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dragonfly  Dockerfile.siwa  Procfile.full  README.md  docker-compose.full.yml  fly.dragonfly.toml  fly.phoenix.toml  fly.siwa.toml  fly.toml  mix.exs  techtree-benchmark-capsules-prd.md
assets/: .npmrc  (+3 more)
core/: README.md  pyproject.toml
core/fixtures/golden/artifact_derivative/: artifact.source.yaml  pyproject.toml
core/fixtures/golden/artifact_family/: artifact.source.yaml  pyproject.toml
core/fixtures/golden/artifact_fixed/: artifact.source.yaml  pyproject.toml
core/fixtures/golden/artifact_plain/: artifact.source.yaml  pyproject.toml
core/fixtures/golden/bbh_sources/: artifact_benchmark_fixed.source.yaml  artifact_challenge_family.source.yaml  artifact_climb_fixed.source.yaml  artifact_draft_challenge.source.yaml  genome.source.yaml  (+5 more)
core/schemas/: artifact-manifest.v1.schema.json  artifact-source.v1.schema.json  node-header.v1.schema.json  payload-index.v1.schema.json  review-manifest.v1.schema.json  review-source.v1.schema.json  run-manifest.v1.schema.json  run-source.v1.schema.json  techtree.bbh.artifact-source.v1.schema.json  techtree.bbh.genome-source.v1.schema.json  techtree.bbh.review-source.v1.schema.json  techtree.bbh.run-source.v1.schema.json
core/src/techtree_core/: __init__.py  bbh_models.py  canonical.py  cli.py  compiler.py  filesystem.py  models.py  schema_export.py
core/tests/: test_bbh_models.py  test_compiler.py
environments/techtree-bbh-py/: README.md  pyproject.toml
environments/techtree-bbh-py/tests/: test_environment_cli.py  test_normalize.py  test_scoring.py  test_workspace.py
(+708 files in other folders)
